--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="PhotographApp">app_name</string>
     <string name="photo">Album</string>
     <string name="butoon_save">botón Guarda</string>
-    <string name="Ingredients">Photos</string>
+    <string name="Photos">Photos</string>
 </resources>
